--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: home
-title: Home
+title: Dani Arama
 banner: "/assets/images/banners/home.jpeg"
+heading: Dani Arama
+subheading: Producer
+sidebar: []
+
 ---
+<div style="border-bottom: 1px white; padding-bottom: 50px;" class="">
+As a Content Studio Manager, I specialize in the dynamic world of lifestyle and studio retouching, 
+bringing images to life with meticulous attention to detail. 
+My expertise extends to creating realistic 3D product renders that bridge the gap between digital art and reality. 
+I am skilled in 2D motion graphics, adding movement and life to static images. 
+My proficiency in sizzle reel production allows me to craft compelling, 
+narrative-driven short videos that capture the essence of a brand or product.
+
+I am adept at asset localization, ensuring that content resonates with diverse global audiences while maintaining brand consistency. 
+My role involves leading creative and product reviews, where I fine-tune each element to align with strategic vision and quality standards. 
+Finally, my responsibility culminates in the global delivery of assets, managing the distribution of content across various platforms and regions, 
+ensuring a seamless and impactful reach to audiences worldwide.
+</div>
