--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ sidebar: []
 
 ---
 <div style="border-bottom: 1px white; padding-bottom: 50px;" class="">
+    <h1>Dani Arama</h1>
 As a Content Studio Manager, I specialize in the dynamic world of lifestyle and studio retouching, 
 bringing images to life with meticulous attention to detail. 
 My expertise extends to creating realistic 3D product renders that bridge the gap between digital art and reality. 
